actualizacion con fetch

--- a/pages/admin.html
+++ b/pages/admin.html
@@ -58,6 +58,20 @@
                 </tbody>
             </table>
         </section>
+        <section>
+            <h1 class="mid">USO DEL FETCH</h1>
+            <table>
+                <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>Nombre Completo</th>
+                        <th>Email</th>
+                    </tr>
+                </thead>
+                <tbody id="data">
+                </tbody>
+            </table>
+        </section>
     </main>
     <footer>
         <footer class="pie_de_pag">
@@ -79,5 +93,6 @@
                 </div>
     </footer>
     <script src="../js/admin.js"></script>
+    
 </body>
 </html>
